--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "curso-react-hooks",
+  "name": "curso-react-hooks-platzi",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "efrenmartinez <developer.emartinez@gmail.com> (https://efrenmartinez.dev/)",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -34,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "license": "MIT"
 }
