:memo: Update title package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curso-react-hooks-platzi",
+  "name": "react-rick-and-morty",
   "version": "0.1.0",
   "private": false,
   "author": "efrenmartinez <developer.emartinez@gmail.com> (https://efrenmartinez.dev/)",
